fix: Fix scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,86 +50,54 @@
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../node_modules/bootstrap/scss/utilities/api";
 
-// body::-webkit-scrollbar {
-//   width: 11px;
-// }
+// Scrollbar
+body::-webkit-scrollbar {
+  width: 11px;
+}
+body {
+  scrollbar-width: thin;
+  scrollbar-color: var(--bs-emphasis-color) var(--bs-body-bg);
+}
+body::-webkit-scrollbar-track {
+  background: var(--bs-body-bg);
+}
+body::-webkit-scrollbar-thumb {
+  background-color: var(--bs-emphasis-color) ;
+  border-radius: 6px;
+  border: 3px solid var(--bs-body-bg);
+}
 
-// body {
-//   scrollbar-width: thin;
-//   scrollbar-color: var(--bg-navbar) var(--bg);
-// }
+// Layout
+section {
+  padding-top: 70px;
+  margin-top: -50px;
+}
 
-// body::-webkit-scrollbar-track {
-//   background: var(--bg);
-// }
+// Card and links
+a {
+  color: inherit !important;
+}
+.card {
+  a {
+    color: inherit !important;
+  }
+}
 
-// body::-webkit-scrollbar-thumb {
-//   background-color: var(--bg-navbar) ;
-//   border-radius: 6px;
-//   border: 3px solid var(--bg);
-// }
-
-// body {
-//   background-color: var(--bg);
-//   color: var(--text);
-// }
-
-// section {
-//   padding-top: 70px;
-//   margin-top: -50px;
-// }
-
-// a {
-//   color: inherit !important;
-// }
-// .navbar {
-//   background-color: var(--bg-navbar);
-//   .navbar-text {
-//     color: var(--text);
-//   }
-//   a {
-//     color: inherit !important;
-//   }
-//   .navbar-toggler {
-//     color: var(--text);
-//   }
-// }
-// footer.navbar {
-//   background-color: var(--bg-hero);
-// }
-// .card {
-//   background-color: var(--bg-card);
-//   a {
-//     color: inherit !important;
-//   }
-// }
-// .badge {
-//   font-size: 0.85em;
-//   color: var(--text);
-//   border: 1px solid var(--border);
-//   a {
-//     vertical-align: bottom;
-//     color: inherit !important;
-//   }
-// }
-// svg.fill-me-anyway {
-//   fill: var(--text);
-// }
+// Badge and icons
+.badge {
+  font-size: 0.85em;
+  color: var(--bs-emphasis-color);
+  border: 1px solid var(--bs-emphasis-color);
+  a {
+    vertical-align: bottom;
+    color: inherit !important;
+  }
+}
+svg.fill-me-anyway {
+  fill: var(--bs-emphasis-color);
+}
 
 // // Themes
-
-// svg.btn-indigo {
-//   color: $indigo;
-//   height: 1.3rem;
-//   width: 1.3rem;
-// }
-
-// svg.btn-orange {
-//   color: $orange;
-//   height: 1.3rem;
-//   width: 1.3rem;
-// }
-
 // body {
 //   --bg: #f6f6f6;
 //   --bg-hero: #e0e0e0;
